Removing dollar sign

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -468,7 +468,7 @@
                 </div>
                 <div class="usa-width-one-half">
                   <ul class="usa-label-list">
-                    <li><span>Contract Award Dollar Amount: </span> <span><i class="fa fa-usd" aria-hidden="true"></i> {{element.data?.award?.amount}}</span></li>
+                    <li><span>Contract Award Dollar Amount: </span> <span>{{element.data?.award?.amount}}</span></li>
                     <li><span>Contract Award Number: </span> <span>{{element.data?.award?.number}}</span></li>
                     <li><span>Contract Award Date: </span> <span>{{element.data?.award?.date | dateFormat: 'MMM DD, YYYY'}}</span></li>
                     <li><span>Contract Line Item Number: </span>
