Add content to new to sam.gov page
(1) Add content to new to sam.gov page
(2) Fix footer header link align problem

--- a/src/app/Help/sections/new-to-sam/new-to-sam.template.html
+++ b/src/app/Help/sections/new-to-sam/new-to-sam.template.html
@@ -1,15 +1,17 @@
 <section class="new-to-sam">
   <h2 class="m_T-2x">New to SAM.gov</h2>
   <div class="usa-grid-full">
-    <p>
-      Everti gloriatur ne mei, at sit accumsan rationibus honestatis. Est an invidunt
-      lucilius, pro ex justo labitur nostrum. Ut his dicunt perpetua tractatos, sed
-      movet timeam id. Nulla saepe ne nec.
+    <h4 class="new-to-sam-question">Need help finding the right information about awards?</h4>
+    <p class="m_T-1x">
+      Get expert guidance right here on how to do business with the Federal Government for free.
     </p>
-    <p>
-      Exerci pericula inciderint cum ei. His vocent sanctus invidunt te, pri amet
-      oportere et, no sed habeo iriure. Esse case timeam ius an.
-    </p>
+    <h4 class="new-to-sam-question">Choose the type of awards program. We coach you step by step.</h4>
+    <p class="m_T-1x">
+      Select a box from the grid below that tells us what type of business you are
+      (Entity or Federal Awards Organization) and the type of award you would like
+      to receive (Assistance or Procurement). We’ll provide the necessary information
+      on how to sign-up, register, apply, and maintain your awards account on SAM.gov.
+
     <hr>
   </div>
 
@@ -19,61 +21,50 @@
       <div class="usa-width-three-fourths">
         <div class="usa-width-one-third">
           <h5 class="centered">Entity</h5>
-          <p class="m_0 p_T-1x small-text">His vocent sanctus invidunt te, pri ameto portere et, no sed habeo.</p>
+          <p class="m_0 p_T-1x small-text">A Corporation, limited liability company, public/private business, or sole proprietorship.</p>
         </div>
         <div class="usa-width-one-third">
-          <h5 class="centered">Federal Award</h5>
-          <p class="m_0 p_T-1x small-text">His vocent sanctus invidunt te, pri ameto portere et, no sed habeo.</p>
+          <h5 class="centered">Federal Hierarchy</h5>
+          <p class="m_0 p_T-1x small-text">Federal Award and Funding Organization.</p>
         </div>
         <div class="usa-width-one-third">
-          <h5 class="centered">Researcher</h5>
-          <p class="m_0 p_T-1x small-text">His vocent sanctus invidunt te, pri ameto portere et, no sed habeo.</p>
+          <h5 class="centered">Researcher/Report</h5>
+          <p class="m_0 p_T-1x small-text">Search awards data for evaluation and reporting.</p>
         </div>
       </div>
     </div>
     <div class="usa-width-one-whole m_T-3x button-row">
       <div class="usa-width-one-fourth">
         <div class="usa-width-one-whole square-paragragh-area">
-          <h5 class="centered">Assistance</h5>
-          <p class="m_0 p_T-1x small-text">His vocent sanctus invidunt te, pri ameto portere et, no sed habeo.</p>
+          <h5 class="centered">Federal Assistance</h5>
+          <p class="m_0 p_T-1x small-text">Government contracts providing funds, resources, grants or information for an entity.</p>
         </div>
         <div class="usa-width-one-whole square-paragragh-area">
-          <h5 class="centered">Procurements</h5>
-          <p class="m_0 p_T-1x small-text">His vocent sanctus invidunt te, pri ameto portere et, no sed habeo.</p>
+          <h5 class="centered">Federal Procurements</h5>
+          <p class="m_0 p_T-1x small-text">Buying goods and services from the Federal Government, Intra-Governmental Transactions (IGT). </p>
         </div>
       </div>
       <div class="usa-width-one-fourth">
         <div class="usa-width-one-whole square-button" (click)="openImageLibrary('area1')">
-          <h5 class="centered">Lipsum Text1</h5>
           <h5 class="centered">Learn more</h5>
         </div>
         <div class="usa-width-one-whole square-button m_T-3x" (click)="openImageLibrary('area2')">
-          <h5 class="centered">Lipsum Text2</h5>
           <h5 class="centered">Learn more</h5>
         </div>
       </div>
       <div class="usa-width-one-fourth">
         <div class="usa-width-one-whole square-button" (click)="openImageLibrary('area3')">
-          <h5 class="centered">Lipsum Text3</h5>
           <h5 class="centered">Learn more</h5>
         </div>
         <div class="usa-width-one-whole square-button m_T-3x" (click)="openImageLibrary('area4')">
-          <h5 class="centered">Lipsum Text4</h5>
           <h5 class="centered">Learn more</h5>
         </div>
       </div>
       <div class="usa-width-one-fourth long-button" (click)="openImageLibrary('area5')">
-        <h5 class="centered m_T-6x p_T-3x">Lipsum Text5</h5>
         <h5 class="centered">Learn more</h5>
       </div>
     </div>
-    <div class="usa-width-one-whole m_T-6x">
-      <p>
-        Everti gloriatur ne mei, at sit accumsan rationibus honestatis. Est an invidunt
-        lucilius, pro ex justo labitur nostrum. Ut his dicunt perpetua tractatos, sed
-        movet timeam id. Nulla saepe ne nec.
-      </p>
-    </div>
+
   </div>
 
   <div *ngIf="showImageLibrary">
