--- a/src/app/Help/sections/overview/overview.template.html
+++ b/src/app/Help/sections/overview/overview.template.html
@@ -41,6 +41,17 @@
         </p>
       </div>
     </div>
+    <h3 class="p_L-3x">Get answers when you chat with the Federal Service Desk (FSD).</h3>
+    <div class="usa-grid-full">
+        <p class="p_L-8x">
+          Hours of Operation<br>
+          Monday - Friday 8 a.m. to 8 p.m. ET<br>
+          U.S. Calls: 866-606-8220<br>
+          International Calls: +1 334-206-7828<br>
+          DSN: 94-866-606-8220
+        </p>
+    </div>
+
   </div>
 
 </section>
