--- a/src/app/organization/organization.page.html
+++ b/src/app/organization/organization.page.html
@@ -1,33 +1,36 @@
 <div class="usa-grid" id="organization-page">
   <div class="usa-width-one-whole" *ngIf="organization">
 
-    <h1>{{organization.agencyName || organization.name || organization.orgKey}}</h1>
+    <div class="clearfix">
+      <div class="logo-section" *ngIf="logoUrl">
+        <!-- Logo -->
+        <img class="logo" [src]="logoUrl" alt="HTML5 Icon">
+      </div>
+      <div class="intro-section">
+        <h1>{{organization.agencyName || organization.name || organization.orgKey}}</h1>
 
-    <section>
-      Code {{organization.aacCode || organization.fpdsOrgId || organization.fpdsCode || organization.oldFpdsCode}}
-      <span class="divider">&nbsp;|&nbsp;</span>
+        <section>
+          Code {{organization.aacCode || organization.fpdsOrgId || organization.fpdsCode || organization.oldFpdsCode}}
+          <span class="divider">&nbsp;|&nbsp;</span>
 
-      <span class="inactive" *ngIf="isModActive() == false">
-        <i class="fa fa-circle-thin" aria-hidden="true"></i>
-        <em>Status Inactive</em>
-      </span>
+          <span class="inactive" *ngIf="isModActive() == false">
+            <i class="fa fa-circle-thin" aria-hidden="true"></i>
+            <em>Status Inactive</em>
+          </span>
 
-      <span class="active" *ngIf="isModActive() == true">
-        <i class="fa fa-circle" aria-hidden="true"></i>
-        <em>Status Active</em>
-      </span>
-    </section>
+          <span class="active" *ngIf="isModActive() == true">
+            <i class="fa fa-circle" aria-hidden="true"></i>
+            <em>Status Active</em>
+          </span>
+        </section>
 
-    <!-- Logo -->
-    <ng-container *ngIf="logoUrl">
-      <img class="logo" [src]="logoUrl" alt="HTML5 Icon">
-    </ng-container>
-
-    <!-- Description -->
-    <section *ngIf="organization.summary">
-      <p id="orgDescription" [innerHTML]="organization.summary"></p>
-    </section>
-
+        <!-- Description -->
+        <section *ngIf="organization.summary">
+          <p id="orgDescription" [innerHTML]="organization.summary"></p>
+        </section>
+      </div>
+    </div>
+    
     <!-- Sub-Tier Agencies -->
     <section id="organization-sub-hierarchy" *ngIf="organization.hierarchy.length>0">
       <div class="usa-grid-full m_T-6x">
