--- a/src/styles/pages/_organization.scss
+++ b/src/styles/pages/_organization.scss
@@ -1,7 +1,35 @@
 #organization-page {
-  .usa-grid{
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
+
+  .logo-section,
+  .intro-section{
+    display: block;
+    float: none;
+    @media (min-width: 600px) {
+      float: left;
+    }
+  }
+
+  .logo-section{
+    width: 80%;
+    @media (min-width: 600px) {
+      width: 15%;
+    }
+    margin-right: 20px;
+    img{
+      margin-top: 50px;
+    }
+  }
+  .logo-section + div{
+    width: 100%;
+    @media (min-width: 600px) {
+      width: 80%;
+    }
+    h1{
+      margin-top: 0px !important;
+      @media (min-width: 600px) {
+        margin-top: 50px !important;
+      }
+    }
   }
 
   h1{
