--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -14,6 +14,7 @@
 @import '~uswds/src/stylesheets/uswds';
 
 @import 'components/accordion';
+@import 'components/authentication';
 @import 'components/footer';
 @import 'components/pagination';
 @import 'components/header';
@@ -91,4 +92,16 @@ h4 {
       width:100%;
     }
   }
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
