--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -430,7 +430,7 @@
               <div class="usa-grid-full">
                 <div class="usa-width-one-half">
                   <ul class="usa-label-list">
-                    <li><span>Contractor Awarded DUNS: </span>
+                    <li><span>Contractor Awarded DUNS / Name: </span>
                       <span>
                         {{element.data?.award?.awardee?.duns}}
                         <ng-container *ngIf="!element.data?.award?.awardee?.duns">
