--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -224,28 +224,31 @@
 
         <section [attr.id]="generateID(opportunityFields.Packages)" *ngIf="shouldBeDisplayed(opportunityFields.Packages) && attachment">
 
-          <h2>Packages</h2>
-          <a *ngIf="hasResources()" href="{{getDownloadAllPackagesURL(opportunity.opportunityId)}}">
-            <i class="fa fa-cloud-download" aria-hidden="true"></i>
-            <strong>Download All Packages</strong>
-          </a>
-
+          <div class="download-container-header">
+            <h2>Packages</h2>
+            <span class="download-button">
+              <a *ngIf="hasResources()" href="{{getDownloadAllPackagesURL(opportunity.opportunityId)}}">
+                <i class="fa fa-cloud-download fa-2x" aria-hidden="true"></i>
+                <span>Download All</span>
+              </a>
+            </span>
+          </div>
+          
           <!-- Header -->
-          <div class="card" *ngFor="let package of attachment.packages">
+          <div class="card download-container" *ngFor="let package of attachment.packages">
 
             <!-- It's public -->
-            <div *ngIf="package.access === 'Public'" class="card-header {{ package.accordionState }}" >
-              <div (click)="toggleAccordion(package)">
-                <h3>{{ package.name }} ({{ package.attachments?.length }})</h3>
-                <strong>Type: {{ package.type }}</strong>
-              </div>
-              <span class="card-download">
-                <a href="{{getDownloadPackageURL(package.packageId)}}">
-                  <i class="fa fa-cloud-download fa-lg" aria-hidden="true"></i>
-                  <span>Download</span>
-                </a>
-              </span>
+            <div *ngIf="package.access === 'Public'" class="card-header {{ package.accordionState }}" (click)="toggleAccordion(package)">
+              <h3>{{ package.name }} ({{ package.attachments?.length }})</h3>
+              <strong>Type: {{ package.type }}</strong>
             </div>
+
+            <span class="download-button">
+              <a href="{{getDownloadPackageURL(package.packageId)}}">
+                <i class="fa fa-cloud-download fa-lg" aria-hidden="true"></i>
+                <span>Download</span>
+              </a>
+            </span>
 
             <ul *ngIf="package.access === 'Public'" [@accordion]="package.accordionState" class="usa-zebra-list">
               <li *ngFor="let element of package.attachments">
