--- a/src/app/Help/help.template.html
+++ b/src/app/Help/help.template.html
@@ -31,13 +31,13 @@
           </ul>
         </li>
         <li>
-          <a [ngClass]="getSectionClass('new')" (click)="changeSection('new')" [routerLink]="['/help/new']">New to SAM.gov?</a>
+          <a [ngClass]="getSectionClass('new')" (click)="changeSection('new')" [routerLink]="['/help/new']">New to SAM.gov</a>
         </li>
         <li>
           <a [ngClass]="getSectionClass('accounts')" (click)="changeSection('accounts')" [routerLink]="['/help/accounts']">User Accounts</a>
           <ul class="usa-sidenav-sub_list" *ngIf="isCurrentSection('accounts')">
             <li><a #userSignUp [ngClass]="getSubSectionClass('userSignUp')" (click)="changeSubSection('userSignUp', userSignUp)" href="{{currentUrl}}#userSignUp">User Sign Up</a></li>
-            <li><a #entityRegistration [ngClass]="getSubSectionClass('entityRegistration')" (click)="changeSubSection('entityRegistration', entityRegistration)" href="{{currentUrl}}#entityRegistration">Entity Registration</a></li>
+            <li><a #recipientOrganization [ngClass]="getSubSectionClass('recipientOrganization')" (click)="changeSubSection('recipientOrganization', recipientOrganization)" href="{{currentUrl}}#recipientOrganization">Recipient Organization</a></li>
           </ul>
         </li>
         <li>
