--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -244,7 +244,7 @@
               <strong>Type: {{ package.type }}</strong>
             </div>
 
-            <span class="download-button">
+            <span *ngIf="package.access === 'Public'" class="download-button">
               <a class="usa-button-small usa-button-gray" href="{{getDownloadPackageURL(package.packageId)}}">
                 <i class="fa fa-cloud-download" aria-hidden="true"></i>
                 <span>Download</span>
