--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -13,6 +13,8 @@
 
 @import '~uswds/src/stylesheets/uswds';
 
+@import 'components/date-entry';
+@import 'components/label-wrapper';
 @import 'components/footer';
 @import 'components/pagination';
 @import 'components/header';
