--- a/src/app/Help/sections/accounts/accounts.template.html
+++ b/src/app/Help/sections/accounts/accounts.template.html
@@ -58,7 +58,7 @@
 
     </div>
     <p>
-      The overall benefits of signing up in the new SAM.gov include streamlined and integrated processes, elimination of data redundancies, and reduced costs while providing improved capability. Entity accounts are discussed in more detail in Entity Registration.
+      The overall benefits of signing up in the new SAM.gov include streamlined and integrated processes, elimination of data redundancies, and reduced costs while providing improved capability. Entity accounts are discussed in more detail in <a href="/help/accounts#recipientOrganization">Registration Organization</a>.
     </p>
   </section>
   <section>
