Style fix for new to sam.gov page

--- a/src/app/Help/sections/new-to-sam/new-to-sam.template.html
+++ b/src/app/Help/sections/new-to-sam/new-to-sam.template.html
@@ -44,19 +44,19 @@
           <p class="m_0 p_T-1x small-text">Buying goods and services from the Federal Government, Intra-Governmental Transactions (IGT). </p>
         </div>
       </div>
-      <div class="usa-width-one-fourth">
-        <div class="usa-width-one-whole square-button" (click)="openImageLibrary('area1')">
+      <div class="usa-width-one-fourth relative">
+        <div class="usa-width-one-whole square-button-top" (click)="openImageLibrary('area1')">
           <h5 class="centered">Learn more</h5>
         </div>
-        <div class="usa-width-one-whole square-button m_T-3x" (click)="openImageLibrary('area2')">
+        <div class="usa-width-one-whole square-button-bottom m_T-3x" (click)="openImageLibrary('area2')">
           <h5 class="centered">Learn more</h5>
         </div>
       </div>
-      <div class="usa-width-one-fourth">
-        <div class="usa-width-one-whole square-button" (click)="openImageLibrary('area3')">
+      <div class="usa-width-one-fourth relative">
+        <div class="usa-width-one-whole square-button-top" (click)="openImageLibrary('area3')">
           <h5 class="centered">Learn more</h5>
         </div>
-        <div class="usa-width-one-whole square-button m_T-3x" (click)="openImageLibrary('area4')">
+        <div class="usa-width-one-whole square-button-bottom m_T-3x" (click)="openImageLibrary('area4')">
           <h5 class="centered">Learn more</h5>
         </div>
       </div>
