--- a/src/styles/pages/_new-to-sam.scss
+++ b/src/styles/pages/_new-to-sam.scss
@@ -3,26 +3,35 @@
     font-size: 14px;
   }
 
-  .square-button{
+  .square-button-bottom{
+    bottom: 0;
+  }
+
+  .square-button-top{
+    top:0;
+  }
+
+  .square-button-top, .square-button-bottom{
     border-radius:  20px;
     background: dodgerblue;
     width: 100%;
     color: #ffffff;
+    position: absolute;
   }
 
-  .square-button:before{
+  .square-button-top:before,.square-button-bottom:before{
     content: "";
     display: block;
     padding-top: 43%;
   }
 
-  .square-button:after{
+  .square-button-top:after,.square-button-bottom:after{
     content: "";
     display: block;
     padding-bottom: 43%;
   }
 
-  .square-button:hover, .long-button:hover{
+  .square-button-top:hover,.square-button-bottom:hover .long-button:hover{
     cursor: pointer;
   }
 
