- Minor update to conform to standards and reuse available components

--- a/src/app/authentication/shared/password/password.component.html
+++ b/src/app/authentication/shared/password/password.component.html
@@ -4,21 +4,25 @@
       <div class="usa-form-large">
         <fieldset>
           <div>
-            <label for="password">Create Password</label>
-            <input type="{{ states.toggle ? 'text' : 'password' }}"
-                   readonly="readonly"
-                   onfocus="this.removeAttribute('readonly');"
-                   [(ngModel)]="password"
-                   (keyup)="validate($event)" />
+            <labelWrapper label="Create Password" name="password" errorMessage="" required="true">
+              <input type="{{ states.toggle ? 'text' : 'password' }}"
+                     class="usa-input-tiny"
+                     readonly="readonly"
+                     onfocus="this.removeAttribute('readonly');"
+                     [(ngModel)]="password"
+                     (keyup)="validate($event)" />
+            </labelWrapper>
           </div>
 
           <div>
-            <label for="password">Confirm Password</label>
-            <input type="{{ states.toggle ? 'text' : 'password' }}"
-                   readonly="readonly"
-                   onfocus="this.removeAttribute('readonly');"
-                   [(ngModel)]="passwordConfirm"
-                   (keyup)="validate($event)" />
+            <labelWrapper label="Confirm Password" name="passwordConfirm" errorMessage="" required="true">
+              <input type="{{ states.toggle ? 'text' : 'password' }}"
+                     class="usa-input-tiny"
+                     readonly="readonly"
+                     onfocus="this.removeAttribute('readonly');"
+                     [(ngModel)]="passwordConfirm"
+                     (keyup)="validate($event)" />
+            </labelWrapper>
           </div>
 
           <p class="usa-form-note">
