--- a/src/styles/pages/_new-to-sam.scss
+++ b/src/styles/pages/_new-to-sam.scss
@@ -31,7 +31,7 @@
     padding-bottom: 43%;
   }
 
-  .square-button-top:hover,.square-button-bottom:hover .long-button:hover{
+  .square-button-top:hover,.square-button-bottom:hover, .long-button:hover{
     cursor: pointer;
   }
 
