- Refactured to using Angular 2's form module

--- a/src/app/authentication/shared/password/password.component.html
+++ b/src/app/authentication/shared/password/password.component.html
@@ -1,25 +1,25 @@
-<div class="usa-authentication usa-password">
+<div class="usa-password">
   <div class="usa-grid">
     <div class="usa-width-one-whole">
       <div class="usa-form-large">
         <fieldset>
           <div>
-            <labelWrapper label="Create Password" name="password" errorMessage="" required="true">
+            <labelWrapper label="Create Password" required="true">
               <input type="{{ states.toggle ? 'text' : 'password' }}"
+                     name="password"
                      readonly="readonly"
                      onfocus="this.removeAttribute('readonly');"
-                     [(ngModel)]="password"
-                     (keyup)="validate($event)" />
+                     [formControl]="password" />
             </labelWrapper>
           </div>
 
           <div>
-            <labelWrapper label="Confirm Password" name="passwordConfirm" errorMessage="" required="true">
+            <labelWrapper [errorMessage]="states.error" label="Confirm Password" required="true">
               <input type="{{ states.toggle ? 'text' : 'password' }}"
+                     name="passwordConfirm"
                      readonly="readonly"
                      onfocus="this.removeAttribute('readonly');"
-                     [(ngModel)]="passwordConfirm"
-                     (keyup)="validate($event)" />
+                     [formControl]="passwordConfirm" />
             </labelWrapper>
           </div>
 
@@ -32,8 +32,8 @@
           <ul>
             <li class="header">Passwords must:</li>
             <li>
-              <div class="icon"><span class="fa" [ngClass]="(states.validations.min ? config.icons.valid : config.icons.invalid)"></span></div>
-              <span [innerHTML]="config.messages.min"></span>
+              <div class="icon"><span class="fa" [ngClass]="(states.validations.minlength ? config.icons.valid : config.icons.invalid)"></span></div>
+              <span [innerHTML]="config.messages.minlength"></span>
             </li>
             <li>
               <div class="icon"><span class="fa" [ngClass]="(states.validations.uppercase ? config.icons.valid : config.icons.invalid)"></span></div>
