--- a/src/styles/components/authentication/shared/_password.scss
+++ b/src/styles/components/authentication/shared/_password.scss
@@ -37,6 +37,7 @@
 
       li {
         display: block;
+        position: relative;
         padding: 0px;
         font-size: 1.7rem;
         line-height: 2.3rem;
@@ -63,9 +64,10 @@
           position: absolute;
           width: $icon-size;
           height: $icon-size;
-          left: 0px;
-          margin-top: -1px;
-          margin-left: 8px;
+          top: 0px;
+          left: -2rem;
+          margin-top: 0px;
+          margin-left: 0px;
           text-align: center;
 
           .fa {
