--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -222,85 +222,87 @@
           <div [innerHTML]="opportunity.data?.descriptions[0].content | fixhtml"></div>
         </section>
 
-        <section [attr.id]="generateID(opportunityFields.Packages)" *ngIf="shouldBeDisplayed(opportunityFields.Packages) && attachment">
-
+        <section [attr.id]="generateID(opportunityFields.Packages)" *ngIf="shouldBeDisplayed(opportunityFields.Packages)">
           <div class="download-container-header">
             <h2>Packages</h2>
-            <span class="download-button">
-              <a class="usa-button-small usa-button-gray" *ngIf="hasResources()" href="{{getDownloadAllPackagesURL(opportunity.opportunityId)}}">
-                <i class="fa fa-cloud-download" aria-hidden="true"></i>
-                <span>Download All Packages</span>
-              </a>
-            </span>
+            <ng-container *ngIf="attachment">
+              <span class="download-button">
+                <a class="usa-button-small usa-button-gray" *ngIf="hasResources()" href="{{getDownloadAllPackagesURL(opportunity.opportunityId)}}">
+                  <i class="fa fa-cloud-download" aria-hidden="true"></i>
+                  <span>Download All Packages</span>
+                </a>
+              </span>
+            </ng-container>
           </div>
 
 
+          <ng-container *ngIf="attachment">
           <!-- Header -->
-          <div class="card download-container" *ngFor="let package of attachment.packages">
+            <div class="card download-container" *ngFor="let package of attachment.packages">
 
-            <!-- It's public -->
-            <div *ngIf="package.access === 'Public'" class="card-header {{ package.accordionState }}" (click)="toggleAccordion(package)">
-              <h3>{{ package.name }} ({{ package.attachments?.length }})</h3>
-              <strong>Type: {{ package.type }}</strong>
-            </div>
+              <!-- It's public -->
+              <div *ngIf="package.access === 'Public'" class="card-header {{ package.accordionState }}" (click)="toggleAccordion(package)">
+                <h3>{{ package.name }} ({{ package.attachments?.length }})</h3>
+                <strong>Type: {{ package.type }}</strong>
+              </div>
 
-            <span *ngIf="package.access === 'Public'" class="download-button">
-              <a class="usa-button-small usa-button-gray" href="{{getDownloadPackageURL(package.packageId)}}">
-                <i class="fa fa-cloud-download" aria-hidden="true"></i>
-                <span>Download</span>
-              </a>
-            </span>
+              <span *ngIf="package.access === 'Public'" class="download-button">
+                <a class="usa-button-small usa-button-gray" href="{{getDownloadPackageURL(package.packageId)}}">
+                  <i class="fa fa-cloud-download" aria-hidden="true"></i>
+                  <span>Download</span>
+                </a>
+              </span>
 
-            <ul *ngIf="package.access === 'Public'" [@accordion]="package.accordionState" class="usa-zebra-list">
-              <li *ngFor="let element of package.attachments">
-                <!-- Element -->
-                <ng-container *ngFor="let resource of attachment.resources">
-                  <!-- Resource -->
-                  <ng-container *ngIf="element.resourceId === resource.resourceId">
-                    <!-- Description -->
-                    <a *ngIf="resource.type === 'link'" href="{{resource.uri}}">
-                      {{resource.description}}
-                      <ng-container *ngIf="resource.size && resource.size != 0">
-                        <sup>{{resource.size | filesize}}</sup>
-                      </ng-container>
-                    </a>
-                    <a *ngIf="resource.type === 'file'" href="{{getDownloadFileURL(resource.resourceId)}}">
-                      {{resource.description}}
-                      <ng-container *ngIf="resource.size && resource.size != 0">
-                        <sup>{{resource.size | filesize}}</sup>
-                      </ng-container>
-                    </a>
+              <ul *ngIf="package.access === 'Public'" [@accordion]="package.accordionState" class="usa-zebra-list">
+                <li *ngFor="let element of package.attachments">
+                  <!-- Element -->
+                  <ng-container *ngFor="let resource of attachment.resources">
+                    <!-- Resource -->
+                    <ng-container *ngIf="element.resourceId === resource.resourceId">
+                      <!-- Description -->
+                      <a *ngIf="resource.type === 'link'" href="{{resource.uri}}">
+                        {{resource.description}}
+                        <ng-container *ngIf="resource.size && resource.size != 0">
+                          <sup>{{resource.size | filesize}}</sup>
+                        </ng-container>
+                      </a>
+                      <a *ngIf="resource.type === 'file'" href="{{getDownloadFileURL(resource.resourceId)}}">
+                        {{resource.description}}
+                        <ng-container *ngIf="resource.size && resource.size != 0">
+                          <sup>{{resource.size | filesize}}</sup>
+                        </ng-container>
+                      </a>
+                    </ng-container>
                   </ng-container>
-                </ng-container>
-              </li>
-            </ul>
+                </li>
+              </ul>
 
-            <!-- Its private -->
-            <div *ngIf="package.access === 'Private'" class="card-header-secure">
-              <h3>{{ package.name }} ({{ package.attachments?.length }})</h3>
-              <strong>Type: {{ package.type }}</strong>
-            </div>
-
-            <div *ngIf="package.access === 'Private'" class="card-secure-content">
-              <p>
-                <i class="fa fa-lock fa-3x fa-pull-left" aria-hidden="true"></i>
-                <em>Secure/sensitive attachments are not currently available, please go to <a href="https://www.fbo.gov/">FBO.gov</a> to view this attachment.</em>
-              </p>
-            </div>
-
-            <!-- Extra options -->
-            <div class="card-extra-content">
-              <div class="label-container-inline">
-                <i class="fa fa-calendar-check-o" aria-hidden="true"></i>
-                <strong>Posted on {{ package.postedDate | dateFormat: 'MMM DD, YYYY' }}</strong>
+              <!-- Its private -->
+              <div *ngIf="package.access === 'Private'" class="card-header-secure">
+                <h3>{{ package.name }} ({{ package.attachments?.length }})</h3>
+                <strong>Type: {{ package.type }}</strong>
               </div>
-              <div class="label-container-inline" style="float: right;">
-                <i class="fa" [ngClass]="{'fa-unlock' : package.access === 'Public', 'fa-lock': package.access === 'Private'}" aria-hidden="true"></i>
-                <strong>{{isSecure(package.access)}}</strong>
+
+              <div *ngIf="package.access === 'Private'" class="card-secure-content">
+                <p>
+                  <i class="fa fa-lock fa-3x fa-pull-left" aria-hidden="true"></i>
+                  <em>Secure/sensitive attachments are not currently available, please go to <a href="https://www.fbo.gov/">FBO.gov</a> to view this attachment.</em>
+                </p>
+              </div>
+
+              <!-- Extra options -->
+              <div class="card-extra-content">
+                <div class="label-container-inline">
+                  <i class="fa fa-calendar-check-o" aria-hidden="true"></i>
+                  <strong>Posted on {{ package.postedDate | dateFormat: 'MMM DD, YYYY' }}</strong>
+                </div>
+                <div class="label-container-inline" style="float: right;">
+                  <i class="fa" [ngClass]="{'fa-unlock' : package.access === 'Public', 'fa-lock': package.access === 'Private'}" aria-hidden="true"></i>
+                  <strong>{{isSecure(package.access)}}</strong>
+                </div>
               </div>
             </div>
-          </div>
-
+          </ng-container>
         </section>
 
         <section [attr.id]="generateID(opportunityFields.Contact)" *ngIf="shouldBeDisplayed(opportunityFields.Contact)">
