--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -259,8 +259,8 @@
                   <ng-container *ngIf="element.resourceId === resource.resourceId">
                     <!-- Icon and Description -->
                     <ng-container *ngIf="resource.type === 'link'">
-                      <img src="{{getResourceIcon('link')}}">
-                      <a href="{{resource.uri}}">
+                      <img class="m_All-3x" style="vertical-align: middle" src="{{getResourceIcon('link')}}">
+                      <a class="m_V-3x p_L-1x p_R-1x" style="display: inline; vertical-align: middle" href="{{resource.uri}}">
                         {{resource.description}}
                         <ng-container *ngIf="resource.size && resource.size != 0">
                           <sup>{{resource.size | filesize}}</sup>
@@ -268,8 +268,8 @@
                       </a>
                     </ng-container>
                     <ng-container *ngIf="resource.type === 'file'">
-                      <img src="{{getResourceIcon(getExtension(resource.name))}}">
-                      <a href="{{getDownloadFileURL(resource.resourceId)}}">
+                      <img class="m_All-3x" style="vertical-align: middle" src="{{getResourceIcon(getExtension(resource.name))}}">
+                      <a class="m_V-3x p_L-1x p_R-1x" style="display: inline; vertical-align: middle" href="{{getDownloadFileURL(resource.resourceId)}}">
                         {{resource.description}}
                         <ng-container *ngIf="resource.size && resource.size != 0">
                           <sup>{{resource.size | filesize}}</sup>
